--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Kuang Xiong', root_path, class: 'navbar-brand'%>
+      <%= link_to 'Rua', root_path, class: 'navbar-brand'%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,6 +32,9 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
+
 </body>
 </html>
