--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -19,7 +19,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Rua', root_path, class: 'navbar-brand'%>
+      <%= link_to root_path, class: 'navbar-brand' do %>
+        <i class="fa fa-optin-monster"></i>
+        Rua
+      <%end%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
