Updated navbar with user links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,21 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <i class="fa fa-optin-monster"></i>
-        Rua
+          <i class="fa fa-optin-monster"></i>
+          Rua
       <%end%>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-nav-collapse">
+      <div class="nav navbar-nav navbar-right">
+        <% if current_user %>
+            <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+        <% else %>
+            <%= link_to "Log in", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+            <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-success navbar-btn', method: :get %>
+        <% end %>
+      </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "About", about_path%></li>
         <li><%= link_to "Contact Us", new_contact_path%></li>
